Editing the entire project search_engine_test